Fixed invalid links in Navbar. Fixed Navbar z-index.

--- a/src/components/layout/NavBar.css
+++ b/src/components/layout/NavBar.css
@@ -3,6 +3,7 @@
     width: 100%;
     background: linear-gradient(180deg, rgba(226,226,226,1) 0%, rgba(255,255,255,0) 100%);
     transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    z-index: 99;
 }
 
 .Navbar.scroll {
